argocd/infra/buildkitd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildkitd
  namespace: actions-runner-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buildkitd
  template:
    metadata:
      labels:
        app: buildkitd
      annotations:
        container.apparmor.security.beta.kubernetes.io/buildkitd: unconfined
    spec:
      containers:
        - name: buildkitd
          image: moby/buildkit:master-rootless
          args:
            - --addr
            - tcp://0.0.0.0:1234
            - --oci-worker-no-process-sandbox
          ports:
            - containerPort: 1234
          securityContext:
            seccompProfile:
              type: Unconfined
            runAsUser: 1000
            runAsGroup: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: buildkitd
  namespace: actions-runner-system
spec:
  selector:
    app: buildkitd
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
